--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('https://via.placeholder.com/1920x1080?text=RC+Background') no-repeat center center/cover;
+  background: url('https://i.ibb.co/Mk8xbkmk/steptodown-com788648.jpg') no-repeat center center/cover;
   opacity: 0.1;
   z-index: 0;
 }
